testcases/negative/duplicate_fn.vcf
BEGIN:VCARD
VERSION:4.0
FN:John Doe
FN:Jane Smith
END:VCARD
